--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
       <p>Mon amour, aujourd’hui tu reçois ton diplôme 🎓<br>
       Et je célèbre chaque instant avec toi, même à distance 💖<br>
       Tu es mon roi, mon trésor, et je t’aime infiniment 👑</p>
-      <img src="gifdiploma" alt="GIF du diplôme">
+      <img src="https://github.com/Nadsou23/Diplomedemonbebe/raw/main/gifdiploma.gif" alt="GIF du diplôme">
       <div class="seal"></div>
     </div>
   </div>
