--- a/index.html
+++ b/index.html
@@ -1,215 +1,185 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <title>Félicitations Royale 💖🎓</title>
-  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Playfair Display', serif;
-      background: radial-gradient(circle at top, #2b1a0f, #1a0f05);
-      overflow-x: hidden;
-      color: #fff8e7;
-      text-align: center;
-    }
+<meta charset="UTF-8">
+<title>Félicitations Royale 💖🎓</title>
+<link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+<style>
+  body {
+    margin: 0;
+    font-family: 'Playfair Display', serif;
+    background: radial-gradient(circle at top, #2b1a0f, #1a0f05);
+    color: #fff8e7;
+    text-align: center;
+    overflow-x: hidden;
+  }
 
-    h1 {
-      margin-top: 40px;
-      font-family: 'Great Vibes', cursive;
-      font-size: 3rem;
-      color: #f8d67e;
-      text-shadow: 2px 2px 8px rgba(0,0,0,0.7);
-    }
+  h1 {
+    margin-top: 50px;
+    font-family: 'Great Vibes', cursive;
+    font-size: 3rem;
+    color: #f8d67e;
+    text-shadow: 2px 2px 8px rgba(0,0,0,0.7);
+  }
 
-    button {
-      margin-top: 30px;
-      padding: 15px 40px;
-      font-size: 20px;
-      border: none;
-      border-radius: 40px;
-      background: linear-gradient(45deg, #b4863e, #ffd57e);
-      color: #2b1a0f;
-      cursor: pointer;
-      box-shadow: 0 6px 20px rgba(0,0,0,0.5);
-      transition: 0.3s;
-      font-weight: bold;
-    }
+  button {
+    margin-top: 30px;
+    padding: 15px 40px;
+    font-size: 20px;
+    border: none;
+    border-radius: 40px;
+    background: linear-gradient(45deg, #b4863e, #ffd57e);
+    color: #2b1a0f;
+    cursor: pointer;
+    box-shadow: 0 6px 20px rgba(0,0,0,0.5);
+    transition: 0.3s;
+    font-weight: bold;
+  }
 
-    button:hover {
-      transform: scale(1.1);
-      background: linear-gradient(45deg, #ffd57e, #f8d67e);
-    }
+  button:hover {
+    transform: scale(1.1);
+    background: linear-gradient(45deg, #ffd57e, #f8d67e);
+  }
 
-    /* Enveloppe Royale */
-    .envelope {
-      position: relative;
-      width: 450px;
-      height: 300px;
-      margin: 60px auto;
-      perspective: 1200px;
-      display: none;
-    }
+  /* Enveloppe royale */
+  .envelope {
+    position: relative;
+    width: 500px;
+    height: 320px;
+    margin: 60px auto;
+    perspective: 1200px;
+    display: none;
+  }
 
-    .flap {
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      background: linear-gradient(135deg, #6b1f1f, #b53f3f);
-      clip-path: polygon(0 0, 100% 0, 50% 50%);
-      transform-origin: top;
-      transition: transform 1.5s;
-      box-shadow: 0 6px 15px rgba(0,0,0,0.5);
-      border: 3px solid #f8d67e;
-      border-bottom: none;
-      z-index: 2;
-    }
+  .flap {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(135deg, #6b1f1f, #b53f3f);
+    clip-path: polygon(0 0, 100% 0, 50% 50%);
+    transform-origin: top;
+    transition: transform 1.5s;
+    box-shadow: 0 6px 15px rgba(0,0,0,0.5);
+    border: 3px solid #f8d67e;
+    border-bottom: none;
+    z-index: 2;
+  }
 
-    .envelope.open .flap {
-      transform: rotateX(-180deg);
-    }
+  .envelope.open .flap {
+    transform: rotateX(-180deg);
+  }
 
-    .letter {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: linear-gradient(180deg, #fff8e7 0%, #f9f1dc 100%);
-      padding: 40px 30px;
-      box-sizing: border-box;
-      opacity: 0;
-      transform: translateY(60px);
-      transition: opacity 1.5s, transform 1.5s;
-      border-radius: 15px;
-      border: 4px solid #f8d67e;
-      box-shadow: 0 8px 25px rgba(0,0,0,0.5);
-      z-index: 1;
-      overflow: hidden;
-    }
+  .letter {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(180deg, #fff8e7 0%, #f9f1dc 100%);
+    padding: 40px 30px;
+    box-sizing: border-box;
+    opacity: 0;
+    transform: translateY(60px);
+    transition: opacity 1.5s, transform 1.5s;
+    border-radius: 15px;
+    border: 4px solid #f8d67e;
+    box-shadow: 0 8px 25px rgba(0,0,0,0.5);
+    z-index: 1;
+    overflow: hidden;
+  }
 
-    .envelope.open .letter {
-      opacity: 1;
-      transform: translateY(0);
-    }
+  .envelope.open .letter {
+    opacity: 1;
+    transform: translateY(0);
+  }
 
-    .letter p {
-      font-family: 'Great Vibes', cursive;
-      font-size: 32px;
-      color: #6b1f1f;
-      line-height: 1.6;
-      margin: 0 0 20px 0;
-    }
+  .letter p {
+    font-family: 'Great Vibes', cursive;
+    font-size: 32px;
+    color: #6b1f1f;
+    line-height: 1.6;
+    margin-bottom: 20px;
+  }
 
-    .letter img {
-      margin-top: 15px;
-      max-width: 100%;
-      max-height: 70%;
-      border-radius: 15px;
-      border: 3px solid #f8d67e;
-      box-shadow: 0 5px 20px rgba(0,0,0,0.5);
-      display: block;
-      margin-left: auto;
-      margin-right: auto;
-    }
+  .letter img {
+    max-width: 100%;
+    max-height: 70%;
+    border-radius: 15px;
+    border: 3px solid #f8d67e;
+    box-shadow: 0 5px 20px rgba(0,0,0,0.5);
+    display: block;
+    margin: 0 auto;
+  }
 
-    /* Paillettes dorées */
-    .sparkle {
-      position: fixed;
-      width: 6px;
-      height: 6px;
-      background: gold;
-      border-radius: 50%;
-      top: -10px;
-      animation: fall 4s linear infinite;
-      opacity: 0.8;
-    }
+  /* Cœurs flottants */
+  .heart {
+    position: fixed;
+    bottom: 0;
+    color: #f8d67e;
+    font-size: 20px;
+    animation: floatUp 6s linear infinite;
+  }
 
-    @keyframes fall {
-      0% { transform: translateY(0) rotate(0deg); }
-      100% { transform: translateY(100vh) rotate(360deg); opacity:0; }
-    }
+  @keyframes floatUp {
+    0% { transform: translateY(0) scale(1); opacity:1; }
+    100% { transform: translateY(-100vh) scale(1.5); opacity:0; }
+  }
 
-    /* Cœurs royaux */
-    .heart {
-      position: fixed;
-      bottom: 0;
-      color: #f8d67e;
-      font-size: 20px;
-      animation: floatUp 6s linear infinite;
-    }
+  /* Sceau de cire */
+  .seal {
+    position: absolute;
+    width: 60px;
+    height: 60px;
+    background: radial-gradient(circle at 30% 30%, #f8d67e 0%, #b4863e 80%);
+    border-radius: 50%;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    box-shadow: 0 0 15px rgba(248,214,126,0.8);
+    animation: pulse 2s infinite;
+    z-index: 3;
+  }
 
-    @keyframes floatUp {
-      0% { transform: translateY(0) scale(1); opacity:1; }
-      100% { transform: translateY(-100vh) scale(1.5); opacity:0; }
-    }
-
-    /* Sceau de cire */
-    .seal {
-      position: absolute;
-      width: 60px;
-      height: 60px;
-      background: radial-gradient(circle at 30% 30%, #f8d67e 0%, #b4863e 80%);
-      border-radius: 50%;
-      bottom: 20px;
-      left: 50%;
-      transform: translateX(-50%);
-      box-shadow: 0 0 15px rgba(248,214,126,0.8);
-      animation: pulse 2s infinite;
-      z-index: 3;
-    }
-
-    @keyframes pulse {
-      0%,100% { transform: translateX(-50%) scale(1); }
-      50% { transform: translateX(-50%) scale(1.1); }
-    }
-  </style>
+  @keyframes pulse {
+    0%,100% { transform: translateX(-50%) scale(1); }
+    50% { transform: translateX(-50%) scale(1.1); }
+  }
+</style>
 </head>
 <body>
 
-  <h1>🎓 Félicitations Royale 💖</h1>
-  <button onclick="openEnvelope()">Ouvre ta lettre Royale 💌</button>
+<h1>🎓 Félicitations Royale 💖</h1>
+<button onclick="openEnvelope()">Ouvre ta lettre Royale 💌</button>
 
-  <div class="envelope" id="envelope">
-    <div class="flap"></div>
-    <div class="letter">
-      <p>Mon amour, aujourd’hui tu reçois ton diplôme 🎓<br>
-      Et je célèbre chaque instant avec toi, même à distance 💖<br>
-      Tu es mon roi, mon trésor, et je t’aime infiniment 👑</p>
-      <img src="https://github.com/Nadsou23/Diplomedemonbebe/raw/main/gifdiploma.gif" alt="GIF du diplôme">
-      <div class="seal"></div>
-    </div>
+<div class="envelope" id="envelope">
+  <div class="flap"></div>
+  <div class="letter">
+    <p>Mon amour, aujourd’hui tu reçois ton diplôme 🎓<br>
+    Et je célèbre chaque instant avec toi, même à distance 💖<br>
+    Tu es mon roi, mon trésor, et je t’aime infiniment 👑</p>
+    <img src="https://github.com/Nadsou23/Diplomedemonbebe/raw/main/gifdiploma.gif" alt="GIF du diplôme">
+    <div class="seal"></div>
   </div>
+</div>
 
-  <script>
-    // Paillettes dorées
-    function createSparkle() {
-      const s = document.createElement("div");
-      s.classList.add("sparkle");
-      s.style.left = Math.random() * window.innerWidth + "px";
-      s.style.width = s.style.height = (Math.random() * 6 + 4) + "px";
-      document.body.appendChild(s);
-      setTimeout(() => { s.remove(); }, 4000);
-    }
-    setInterval(createSparkle, 150);
+<script>
+  // Cœurs flottants
+  function createHeart() {
+    const heart = document.createElement("div");
+    heart.classList.add("heart");
+    heart.style.left = Math.random() * window.innerWidth + "px";
+    heart.style.fontSize = (Math.random() * 20 + 15) + "px";
+    heart.innerHTML = "❤️";
+    document.body.appendChild(heart);
+    setTimeout(() => { heart.remove(); }, 6000);
+  }
+  setInterval(createHeart, 700);
 
-    // Cœurs flottants
-    function createHeart() {
-      const heart = document.createElement("div");
-      heart.classList.add("heart");
-      heart.style.left = Math.random() * window.innerWidth + "px";
-      heart.style.fontSize = (Math.random() * 20 + 15) + "px";
-      heart.innerHTML = "❤️";
-      document.body.appendChild(heart);
-      setTimeout(() => { heart.remove(); }, 6000);
-    }
-    setInterval(createHeart, 700);
-
-    // Ouvrir enveloppe
-    function openEnvelope() {
-      document.getElementById("envelope").style.display = "block";
-      setTimeout(() => { document.getElementById("envelope").classList.add("open"); }, 200);
-    }
-  </script>
+  // Ouvrir enveloppe
+  function openEnvelope() {
+    document.getElementById("envelope").style.display = "block";
+    setTimeout(() => { document.getElementById("envelope").classList.add("open"); }, 200);
+  }
+</script>
 </body>
 </html>
