--- a/index.html
+++ b/index.html
@@ -3,30 +3,125 @@
 <head>
     <meta charset="UTF-8">
     <title>Félicitations Mon Chéri !</title>
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;600&family=Montserrat:wght@300;400&display=swap" rel="stylesheet">
     <style>
         body {
-            background: #f9f6f2;
-            font-family: 'Segoe UI', Arial, sans-serif;
-            text-align: center;
-            padding: 40px;
+            background: linear-gradient(135deg, #1a1a1a, #2c2c2c);
+            font-family: 'Montserrat', sans-serif;
+            min-height: 100vh;
+            margin: 0;
+            padding: 40px 20px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
+
         .container {
-            background: #fff;
-            border-radius: 15px;
-            box-shadow: 0 4px 20px rgba(0,0,0,0.1);
-            max-width: 500px;
+            background: rgba(255, 255, 255, 0.95);
+            border-radius: 20px;
+            box-shadow: 0 10px 30px rgba(0,0,0,0.2);
+            max-width: 600px;
             margin: auto;
-            padding: 30px;
+            padding: 40px;
+            position: relative;
+            overflow: hidden;
         }
+
+        .container::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            height: 5px;
+            background: linear-gradient(90deg, #c5a47e, #dfbd95);
+        }
+
+        h1 {
+            font-family: 'Cormorant Garamond', serif;
+            color: #2c2c2c;
+            font-size: 2.5em;
+            margin-bottom: 30px;
+            letter-spacing: 1px;
+            position: relative;
+        }
+
+        h1::after {
+            content: '';
+            display: block;
+            width: 80px;
+            height: 2px;
+            background: #c5a47e;
+            margin: 15px auto;
+        }
+
+        .photo {
+            margin: 30px 0;
+            position: relative;
+        }
+
+        .photo img {
+            max-width: 100%;
+            border-radius: 15px;
+            box-shadow: 0 8px 25px rgba(0,0,0,0.1);
+            transition: transform 0.3s ease;
+        }
+
+        .photo img:hover {
+            transform: scale(1.02);
+        }
+
+        p {
+            font-size: 1.1em;
+            color: #444;
+            line-height: 1.8;
+            margin: 25px 0;
+        }
+
+        .gif-btn button {
+            background: linear-gradient(135deg, #c5a47e, #dfbd95);
+            color: white;
+            border: none;
+            padding: 15px 35px;
+            border-radius: 50px;
+            font-size: 1.1em;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            font-family: 'Montserrat', sans-serif;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            margin: 20px 0;
+            box-shadow: 0 4px 15px rgba(197, 164, 126, 0.2);
+        }
+
+        .gif-btn button:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 6px 20px rgba(197, 164, 126, 0.3);
+        }
+
         .gif-container {
             display: none;
-            margin: 20px 0;
+            margin: 30px 0;
         }
+
         .gif-container img {
             max-width: 100%;
-            border-radius: 10px;
+            border-radius: 15px;
+            box-shadow: 0 8px 25px rgba(0,0,0,0.1);
         }
-        /* ... autres styles restent identiques ... */
+
+        .heart {
+            font-size: 2.5em;
+            color: #c5a47e;
+            margin: 30px 0;
+            animation: pulse 1.5s infinite;
+        }
+
+        @keyframes pulse {
+            0% { transform: scale(1); }
+            50% { transform: scale(1.1); }
+            100% { transform: scale(1); }
+        }
     </style>
     <script>
         function toggleGif() {
@@ -34,17 +129,17 @@
             const btn = document.getElementById('gifBtn');
             if (gifContainer.style.display === 'none') {
                 gifContainer.style.display = 'block';
-                btn.textContent = 'Cacher le GIF 🎬';
+                btn.textContent = '♡ Cacher le GIF ♡';
             } else {
                 gifContainer.style.display = 'none';
-                btn.textContent = 'Voir le GIF 🎉';
+                btn.textContent = '♡ Voir le GIF ♡';
             }
         }
     </script>
 </head>
 <body>
     <div class="container">
-        <h1>Félicitations mon chéri ! 🎓</h1>
+        <h1>Félicitations mon chéri</h1>
         <div class="photo">
             <img src="https://github.com/ton-utilisateur/ton-repo/raw/main/WhatsApp%20Image%202025-09-09%20at%2016.52.58.jpeg" alt="Photo de remise de diplôme">
         </div>
@@ -52,10 +147,10 @@
             Même si je suis loin aujourd'hui,<br>
             je suis tellement fière de toi et de tout ce que tu as accompli.<br>
             Bravo pour ta cérémonie de remise de diplôme !<br>
-            Je t'aime fort et je pense à toi. 💙
+            Je t'aime fort et je pense à toi.
         </p>
         <div class="gif-btn">
-            <button id="gifBtn" onclick="toggleGif()">Voir le GIF 🎉</button>
+            <button id="gifBtn" onclick="toggleGif()">♡ Voir le GIF ♡</button>
         </div>
         <div id="gifContainer" class="gif-container">
             <img src="https://github.com/Nadsou23/Diplomedemonbebe/raw/main/gifdiploma.gif" alt="GIF du diplôme">
