--- a/index.html
+++ b/index.html
@@ -99,9 +99,10 @@
             box-shadow: 0 6px 20px rgba(197, 164, 126, 0.3);
         }
 
-        .gif-container {
+        .surprise-container {
             display: none;
-            margin: 30px 0;
+            margin: 20px 0;
+            animation: fadeIn 1s ease-in;
         }
 
         .gif-container img {
@@ -113,8 +114,13 @@
         .heart {
             font-size: 2.5em;
             color: #c5a47e;
-            margin: 30px 0;
+            margin: 20px 0;
             animation: pulse 1.5s infinite;
+        }
+
+        @keyframes fadeIn {
+            from { opacity: 0; }
+            to { opacity: 1; }
         }
 
         @keyframes pulse {
@@ -123,19 +129,6 @@
             100% { transform: scale(1); }
         }
     </style>
-    <script>
-        function toggleGif() {
-            const gifContainer = document.getElementById('gifContainer');
-            const btn = document.getElementById('gifBtn');
-            if (gifContainer.style.display === 'none') {
-                gifContainer.style.display = 'block';
-                btn.textContent = '♡ Cacher le GIF ♡';
-            } else {
-                gifContainer.style.display = 'none';
-                btn.textContent = '♡ Voir le GIF ♡';
-            }
-        }
-    </script>
 </head>
 <body>
     <div class="container">
@@ -150,12 +143,28 @@
             Je t'aime fort et je pense à toi.
         </p>
         <div class="gif-btn">
-            <button id="gifBtn" onclick="toggleGif()">♡ Voir le GIF ♡</button>
+            <button id="gifBtn" onclick="toggleGif()">♡ Voir la surprise ♡</button>
         </div>
-        <div id="gifContainer" class="gif-container">
-            <img src="https://github.com/Nadsou23/Diplomedemonbebe/raw/main/gifdiploma.gif" alt="GIF du diplôme">
+        <div class="surprise-container" id="surpriseContainer">
+            <div class="gif-container">
+                <img src="https://github.com/Nadsou23/Diplomedemonbebe/raw/main/gifdiploma.gif" alt="GIF du diplôme">
+            </div>
+            <div class="heart">❤️</div>
         </div>
-        <div class="heart">❤️</div>
     </div>
+
+    <script>
+        function toggleGif() {
+            const container = document.getElementById('surpriseContainer');
+            const btn = document.getElementById('gifBtn');
+            if (container.style.display === 'none') {
+                container.style.display = 'block';
+                btn.textContent = '♡ Cacher la surprise ♡';
+            } else {
+                container.style.display = 'none';
+                btn.textContent = '♡ Voir la surprise ♡';
+            }
+        }
+    </script>
 </body>
 </html>
