--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     <div class="container">
         <h1>Félicitations mon chéri</h1>
         <div class="photo">
-            <img src="https://github.com/ton-utilisateur/ton-repo/raw/main/WhatsApp%20Image%202025-09-09%20at%2016.52.58.jpeg" alt="Photo de remise de diplôme">
+            <img src="https://raw.githubusercontent.com/Nadsou23/Diplomedemonbebe/02b27de8e4f5bc4445df8c0458f7d8b033abd2c8/monbebe.png" alt="Photo de remise de diplôme">
         </div>
         <p>
             Même si je suis loin aujourd'hui,<br>
