--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     <div class="container">
         <h1>Félicitations mon chéri</h1>
         <div class="photo">
-            <img src="https://raw.githubusercontent.com/Nadsou23/Diplomedemonbebe/main/monbebe.jpg" alt="Photo de remise de diplôme">
+            <img src="https://raw.githubusercontent.com/Nadsou23/Diplomedemonbebe/3b0c34c24552c16a057e5ef783a426451b7eeaf2/monbebe.png>
         </div>
         <p>
             Même si je suis loin aujourd'hui,<br>
